--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,17 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravolt/avatar": "2.1.0"
+        "laravolt/avatar": "2.1.0",
+        "lavary/laravel-menu": "1.6.0",
+        "santigarcor/laratrust": "5.0.9",
+        "uxweb/sweet-alert": "2.0.1",
+        "yajra/laravel-datatables-oracle": "v8.13.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "v3.2.1",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
