--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "sweetalert": "^2.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
         "@coreui/coreui": "^2.1.6",
         "@fortawesome/fontawesome-free": "^5.6.3",
+        "datatables.net-bs4": "^1.10.19",
+        "datatables.net-buttons-bs4": "^1.5.4",
+        "datatables.net-responsive-bs4": "^2.2.3",
+        "datatables.net-select-bs4": "^1.2.7",
         "perfect-scrollbar": "^1.4.0"
     }
 }
